--- a/loginpage.css
+++ b/loginpage.css
@@ -1,11 +1,14 @@
 :root {
-  font-family: monospace;
+  font-family: 'Press Start 2P', monospace;
+  font-size: 14px;
+  background-color: darkblue;
+  text-shadow: 0 0 1px #00ff00; /* glow effect like old monitors */
+  image-rendering: pixelated;
   line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: black;
+  color: lightgray;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -16,11 +19,11 @@
 .loginpage {
     text-align: center;
     margin: auto;
-    width: 50%;
-    border: 10px solid white;
-    padding: 10px;
+    width: 40%;
+    justify-content:center;
+    align-self: center;
+    align-items: center;
 }
-
 
 body {
     min-height: 100%;
@@ -28,5 +31,46 @@ body {
 
 .footer {
     vertical-align: bottom;
-    position: absolute;
+    position: fixed;
+    width: 100%;
+    text-align: center;
+    bottom: 0;
+    padding: 10px;
+}
+
+input {
+  font-family: 'Press Start 2P', monospace;
+  font-size: 20px;
+  padding: 10px;
+  margin: 10px;
+  background-color: lightgray;
+  color: black;
+  border: 4px solid gray;
+  outline: none;
+  text-align: center;
+  border-radius: 0;
+  width: 80%;
+  box-sizing: border-box;
+  transition: all 0.2s ease-in-out;
+}
+
+button {
+  font-family: 'Press Start 2P', monospace;
+  font-size: 20px;
+  padding: 10px;
+  margin: 10px;
+  background-color: black;
+  color: white;
+  border: 1px solid white;
+  outline: none;
+  text-align: center;
+  border-radius: 0;
+  width: 40%;
+  box-sizing: border-box;
+  transition: all 0.2s ease-in-out;
+}
+
+button:hover {
+  background-color: #222;
+  color: white;
 }
