--- a/loginpage.css
+++ b/loginpage.css
@@ -1,5 +1,5 @@
 :root {
-  font-family: 'Press Start 2P', monospace;
+  font-family: "Press Start 2P", monospace;
   font-size: 14px;
   background-color: darkblue;
   text-shadow: 0 0 1px #00ff00; /* glow effect like old monitors */
